--- a/frontEnd/css/materialize.css
+++ b/frontEnd/css/materialize.css
@@ -6749,7 +6749,7 @@ input[type=checkbox]:not(:disabled) ~ .lever:active:after {
 /***************
   Select Field
 ***************/
-.select-label {
+/*.select-label {
   position: absolute; }
 
 .select-wrapper {
@@ -6794,20 +6794,20 @@ select:disabled {
   color: rgba(0, 0, 0, 0.3);
   cursor: default;
   -webkit-user-select: none;
-  /* webkit (safari, chrome) browsers */
+  /* webkit (safari, chrome) browsers 
   -moz-user-select: none;
   /* mozilla browsers */
   -ms-user-select: none;
   /* IE10+ */
-  border-bottom: 1px solid rgba(0, 0, 0, 0.3); }
+/*  border-bottom: 1px solid rgba(0, 0, 0, 0.3); }
 
 .select-wrapper i {
   color: rgba(0, 0, 0, 0.3); }
 
 .select-dropdown li.disabled {
   color: rgba(0, 0, 0, 0.3);
-  background-color: transparent; }
-
+  background-color: transparent; }*/
+*/*/
 /*********************
       File Input
 **********************/
