--- a/frontEnd/css/style.css
+++ b/frontEnd/css/style.css
@@ -48,5 +48,13 @@
 	font-size: 28px;
 }
 
+#quiz-box {
+	border-right: 1px solid gray;
+	border-left: 1px solid gray;
+	height: 600px;
+	margin-top: 5px; 
+}
+
+
 
 
