--- a/frontEnd/css/style.css
+++ b/frontEnd/css/style.css
@@ -60,9 +60,7 @@
 	margin-top: 5px; 
 }
 
-
-
-.instructions-text,.login-container {
+.instructions-text,.login-container,.submit-button {
 	font-family: cheltenham;
 	font-size: 18px;
 }
