fixed bugs in loader, added time, added scorekeeper

--- a/frontEnd/css/style.css
+++ b/frontEnd/css/style.css
@@ -84,6 +84,17 @@ li {
 	font-size: 28px;
 }
 
+#headlineDate{
+	font-size: 15px;
+	font-style: italic;
+	float: right;
+}
+
+#loadBar {
+	text-align: center;
+	margin-top: 240px;
+}
+
 /*button {
 	padding-top: 2px;
 }*/
